err.txt
D:\Projetos\eidolon\build.js:172
      htmlContent = htmlContent + \`
                                  ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.16.0
